# AcuteRecorder

./: .gitignore  .gitlab-ci.sh  .gitlab-ci.yml  CMakeLists.txt  LICENSE.txt  README.md
CMake/common/: Common.cmake  CommonCPack.cmake  GitTargets.cmake
acuterecorder/: .AbstractRendererThread.cpp.swp  AbstractRendererThread.cpp  AbstractRendererThread.h  CMakeLists.txt  Input.cpp  Input.h  QRenderHelper.cpp  QRenderHelper.h  Recorder.cpp  Recorder.h  RecorderAction.cpp  RecorderAction.h  RecorderGeneralData.h  RecorderSettings.cpp  RecorderSettings.h  RecorderSettingsBuilder.cpp  RecorderSettingsBuilder.h  RecorderStorageWorker.cpp  RecorderStorageWorker.h  Utils.h  VideoStorageThread.cpp  VideoStorageThread.h  WidgetRenderThread.cpp  WidgetRenderThread.h  resources_recorder.qrc
acuterecorder/dialog/: RSWParameters.h  RecorderDialog.cpp  RecorderDialog.h  RecorderSettingsDialog.cpp  RecorderSettingsDialog.h  RecorderSettingsWidget.cpp  RecorderSettingsWidget.h  RecordingSettingsWidget.h
acuterecorder/dialog/constant/: Styles.h
acuterecorder/dialog/element/: ScreenComboBox.cpp  ScreenComboBox.h  SelectionArea.cpp  SelectionArea.h
acuterecorder/dialog/region/: DestinationModeRegion.cpp  DestinationModeRegion.h  FixedDestinationModeRegion.cpp  FixedDestinationModeRegion.h  OutputRegion.cpp  OutputRegion.h  ScaledDestinationModeRegion.cpp  ScaledDestinationModeRegion.h  SelectionModeRegion.cpp  SelectionModeRegion.h
acuterecorder/dialog/util/: APIUtils.cpp  APIUtils.h  PixmapHolder.cpp  PixmapHolder.h  SelectionMode.h
acuterecorder/old/: AbstractRendererThread.cpp  QRenderHelper.cpp  Recorder.cpp  Recorder.h  RecorderGeneralData.cpp  RecorderGeneralData.h  VideoStorageThread.cpp  WidgetRenderThread.cpp  WidgetRenderThread.h
acuterecorder/worker/: FFMPEGRecorderStorageWorker.cpp  FFMPEGRecorderStorageWorker.h  FFMPEGWorkerBuilder.cpp  FFMPEGWorkerBuilder.h  ImageRecorderStorageWorker.cpp  ImageRecorderStorageWorker.h  ImageWorkerBuilder.cpp  ImageWorkerBuilder.h  RecorderStorageWorker.cpp  RecorderStorageWorker.h  WorkerBuilder.cpp  WorkerBuilder.h
docs/: english.md  spanish.md
example/: CMakeLists.txt  main.cpp
example/constant/: Styles.h
example/element/: DestinationModeButton.cpp  DestinationModeButton.h  FPSTextField.cpp  FPSTextField.h  OutputFileButton.h  OutputTextField.cpp  OutputTextField.h  QueueSizeBar.cpp  QueueSizeBar.h  ScreenComboBox.cpp  ScreenComboBox.h  SelectionArea.cpp  SelectionArea.h  SelectionModeButton.cpp  SelectionModeButton.h  StartStopButton.cpp  StartStopButton.h
example/region/: DestinationModeRegion.cpp  DestinationModeRegion.h  FixedDestinationModeRegion.cpp  FixedDestinationModeRegion.h  MainWindowRegion.cpp  MainWindowRegion.h  OutputRegion.cpp  OutputRegion.h  ScaledDestinationModeRegion.cpp  ScaledDestinationModeRegion.h  SelectionModeRegion.cpp  SelectionModeRegion.h
example/resources/: resources_index.qrc  style.css
example/util/: PixmapHolder.cpp  PixmapHolder.h  QtUtils.cpp  QtUtils.h  SelectionMode.h
qtrecorderlib/include/: RecorderGeneralData.h  WidgetRenderThread.h
qtrecorderlib/src/: AbstractRendererThread.cpp  QRenderHelper.cpp  RecorderGeneralData.cpp  VideoStorageThread.cpp  WidgetRenderThread.cpp
resources/: style.css
src/: MyRubberWindow.cpp  MyRubberWindow.h  RenderManager.cpp  RenderManager.h  StoreManager.cpp  StoreManager.h  main.cpp  tutorial.cpp
src/constant/: QTUtils.cpp  QtUtils.h  Styles.h
src/data/: RecorderGeneralData.h  ViewportD.h  ViewportI.h
src/element/: DestinationModeButton.cpp  DestinationModeButton.h  FPSTextField.cpp  FPSTextField.h  OutputFileButton.cpp  OutputFileButton.h  OutputTextField.cpp  OutputTextField.h  QueueSizeBar.cpp  QueueSizeBar.h  ScreenComboBox.cpp  ScreenComboBox.h  SelectionArea.cpp  SelectionArea.h  SelectionModeButton.cpp  SelectionModeButton.h  StartStopButton.cpp  StartStopButton.h
src/region/: DestinationModeRegion.cpp  DestinationModeRegion.h  FixedDestinationModeRegion.cpp  FixedDestinationModeRegion.h  MainWindowRegion.cpp  MainWindowRegion.h  OutputRegion.cpp  OutputRegion.h  ScaledDestinationModeRegion.cpp  ScaledDestinationModeRegion.h  SelectionModeRegion.cpp  SelectionModeRegion.h
src/render/: AbstractRendererThread.cpp  AbstractRendererThread.h  QRenderHelper.cpp  QRenderHelper.h  VideoStorageThread.cpp  VideoStorageThread.h  WidgetRenderThread.cpp  WidgetRenderThread.h
src/util/: PixmapHolder.cpp  PixmapHolder.h  QtUtils.h
